--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -69,47 +69,18 @@
 
             <div class="col col-60" id="tile-section">
             <div class="tile-section-border">
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
+              <span ng-repeat="row in rows">
 
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
+              <div class="tile" ng-repeat="col in columns">
+                  <!-- {{col}}{{row}} -->
+                  <span ng-show="filled_tiles.indexOf(col+row)!=-1">
+                  {{ board.symbols[col+row].word }}<br>
+                  <img src = "{{board.symbols[col+row].symbol.image}}"
+                    style="width:40px;height:40px">
+                  </span>
+                </div>
 
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
-              <div class="tile">Tile</div>
+              </span>
             </div>
             </div>
             <!-- <div class="col col-2" style="float:left;"></div> -->
