--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -30,14 +30,16 @@
         <button class="button button-outline button-calm button-small" id="btn-styling">
           <a href=""><i class="icon ion-gear-b"></i> Settings</a>
         </button>
-        <button class="button button-outline button-calm button-small" id="btn-styling">
-          <!-- <i class="icon ion-eye-disabled"></i>  -->
-          <i class="icon ion-eye"></i>Show/Hide Tiles
-        </button>
         <button class="button button-outline button-calm button-small item item-toggle" id="btn-styling">
           <i class="icon ion-grid"></i> Board Factory
         </button>
-        <button class="done-button">DONE</div>
+        <button class="button button-outline button-calm button-small" id="btn-styling" style="margin-right:10px;">
+          <!-- <i class="icon ion-eye-disabled"></i>  -->
+          <i class="icon ion-eye"></i>Show All Tiles
+          <br>
+          <p class="show-hide-label">*Requires Wifi</p>
+        </button>
+        <button class="done-button"><p>DONE</p></div>
       </div>
     </ion-header-bar>
 
