--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -63,7 +63,13 @@
           <div class="col col-90" id="full-body">
             <div class="word-builder">
               <div class="word-builder-input" style="margin-left:-15px">
-                <img src="img/AAC_assets/delete_button.png" id="home-section"/>
+                <div class="tile" ng-repeat="symbol in selectedTiles">
+                  {{ symbol.word }}<br>
+                  <img src = "{{symbol.symbol.image}}"
+                    style="width:40px;height:40px">
+                </div>
+                <img src="img/AAC_assets/delete_button.png" id="home-section"
+                  ng-click="deleteLastTile()" />
               </div>
             </div>
 
@@ -71,7 +77,8 @@
             <div class="tile-section-border">
               <span ng-repeat="row in rows">
 
-              <div class="tile" ng-repeat="col in columns">
+              <div class="tile" ng-repeat="col in columns"
+                ng-click="clickTile(board.symbols[col+row])">
                   <!-- {{col}}{{row}} -->
                   <span ng-show="filled_tiles.indexOf(col+row)!=-1">
                   {{ board.symbols[col+row].word }}<br>
