--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -160,7 +160,12 @@
             <h1 class="title"><strong>Pick a favorite color for your app!</strong></h1>
 
             <div class="color-choice" ng-repeat="title in colorName" ng-click="colorSelect($index)" ng-class="{selectedColor:$index==selectedIndex}" id="container">{{title.colorTitle}}
-            <img id="scribble" ng-src="{{title.url}}" alt="image" style="width:70%; height:70%;" /></div>
+
+            <img ng-show="!inverse" ng-src="{{title.url}}" alt="image" style="width:70%; height:70%;" />
+            
+            <img ng-show="inverse" ng-src="{{title.placeholder}}" alt="image" style="width:70%; height:70%;" />
+
+            </div>
 
           </div>
 
