--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -161,7 +161,7 @@
 
             <div class="color-choice" ng-repeat="title in colorName" ng-click="colorSelect($index)" ng-class="{selectedColor:$index==selectedIndex}" id="container">{{title.colorTitle}}
 
-              <img ng-src="{{title.url}}" alt="image" style="width:70%; height:70%;" />
+              <img ng-src="{{title.url}}" alt="image" style="width:70%; height:70%;" class="originalImg" />
             </div>
           </div>
 
